      operations.  (Bug spotted by Karsten)
    - Fix a small memory leak whenever we decide against using a
      newly picked entry guard. Reported by Mike Perry.
    - Changing the ExitPolicyRejectPrivate setting should cause us to
      rebuild the descriptor.
    - When picking v2 hidden service directories, don't pick ones that
      aren't listed as Running.

  o Minor features:
    - When we negotiate a v2 OR connection (not yet implemented), accept
      RELAY_EARLY cells and turn them into RELAY cells if we've negotiated
      a v1 connection.  Initial code for proposal 110.


Changes in version 0.2.0.11-alpha - 2007-11-12
  o Security fixes:
    - Exit policies now reject connections that are addressed to a
      relay's public (external) IP address too, unless
      ExitPolicyRejectPrivate is turned off. We do this because too
      many relays are running nearby to services that trust them based
      on network address.

  o Major bugfixes:
    - Fix a memory leak on exit relays; we were leaking a cached_resolve_t
      on every successful resolve. Reported by Mike Perry; bugfix
      on 0.1.2.x.
    - On authorities, never downgrade to old router descriptors simply
      because they're listed in the consensus. This created a catch-22
      where we wouldn't list a new descriptor because there was an
      old one in the consensus, and we couldn't get the new one in the
      consensus because we wouldn't list it. Possible fix for bug 548.
      Also, this might cause bug 543 to appear on authorities; if so,
      we'll need a band-aid for that. Bugfix on 0.2.0.9-alpha.

  o Packaging fixes on 0.2.0.10-alpha:
    - We were including instructions about what to do with the
      src/config/fallback-consensus file, but we weren't actually
      including it in the tarball. Disable all of that for now.

  o Minor features:
    - Allow people to say PreferTunnelledDirConns rather than
      PreferTunneledDirConns, for those alternate-spellers out there.
