@@ -12,6 +12,10 @@ Changes in version 0.2.0.12-alpha - 2007-11-??
       rebuild the descriptor.
     - When picking v2 hidden service directories, don't pick ones that
       aren't listed as Running.
+    - If we're trying to fetch a bridge descriptor and there's no way
+      the bridge authority could help us (for example, we don't know
+      a digest, or there is no bridge authority), don't be so eager to
+      fall back to asking the bridge authority.
 
   o Minor features:
     - When we negotiate a v2 OR connection (not yet implemented), accept
